realize registration and authorization users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_monitoring?useSSL=false&serverTimezone=UTC
+spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+
+jwt.token.secret=JwtRestAppSecret
+jwt.token.expired=3600000
