--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 jwt.token.secret=JwtRestAppSecret
 jwt.token.expired=3600000
+
+spring.data.web.pageable.page-parameter=pageNumber
+spring.data.web.pageable.size-parameter=pageSize
