--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ jwt.token.expired=3600000
 
 spring.data.web.pageable.page-parameter=pageNumber
 spring.data.web.pageable.size-parameter=pageSize
+
+spring.liquibase.change-log=classpath:db/migration/master.xml
