fix migrations, add findDateBetween method in Price

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_monitoring?useSSL=false&serverTimezone=UTC
-spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.default_schema=monitoring
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
 jwt.token.secret=JwtRestAppSecret
@@ -12,3 +11,5 @@ spring.data.web.pageable.page-parameter=pageNumber
 spring.data.web.pageable.size-parameter=pageSize
 
 spring.liquibase.change-log=classpath:db/migration/master.xml
+spring.liquibase.default-schema=monitoring
+spring.liquibase.liquibase-schema=monitoring
