--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,13 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
 
-jwt.token.secret=JwtRestAppSecret
-jwt.token.expired=3600000
-
 spring.data.web.pageable.page-parameter=pageNumber
 spring.data.web.pageable.size-parameter=pageSize
 
 spring.liquibase.change-log=classpath:db/migration/master.xml
 spring.liquibase.default-schema=monitoring
 spring.liquibase.liquibase-schema=monitoring
+
+jwt.token.secret=JwtRestAppSecret
+jwt.token.expired=3600000
+input=file:/product_monitoring/src/main/resources/prices.csv
