added the price dynamics method to the priceController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,14 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
 
-spring.data.web.pageable.page-parameter=pageNumber
-spring.data.web.pageable.size-parameter=pageSize
+logging.file.name=app.log
 
 spring.liquibase.change-log=classpath:db/migration/master.xml
 spring.liquibase.default-schema=monitoring
 spring.liquibase.liquibase-schema=monitoring
+
+spring.data.web.pageable.page-parameter=pageNumber
+spring.data.web.pageable.size-parameter=pageSize
 
 jwt.token.secret=JwtRestAppSecret
 jwt.token.expired=3600000
